# casper-ve-cep47

./: Cargo.toml  Makefile
cep47-tests/: Cargo.toml
tests/: Cargo.toml
tests/src/: lib_integration_tests.rs
tests/test-session/: Cargo.toml
tests/test-session/src/: main.rs
tests/wasm/: test-session.wasm  ve.wasm
ve/: Cargo.toml
ve/src/: I128.rs  cep47.rs  data.rs  erc20_helpers.rs  error.rs  lib.rs  lock.rs  utils.rs  vedata.rs
