[package]
name = "ve"
version = "0.2.0"
authors = ["astro019 <dmitry.yakov7@gmail.com>"]
edition = "2018"

[dependencies]
hex = { version = "0.4.3", default-features = false }
casper-contract = { version = "1.4.4", features=["test-support"] }
casper-types = "1.5.0"
serde = { version = "1", features = [
  "derive",
  "alloc",
], default-features = false }

[[bin]]
name = "ve"
path = "bin/ve.rs"
bench = false
doctest = false
test = false
