[package]
name = "test-session"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "test-session"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = { version = "1.4.4", features=["test-support"] }
casper-types = "1.3.2"
hex = "0.4.3"
blake2 = "0.9.2"
base64 = "0.13.0"

[features]
default = ["casper-contract/std", "casper-types/std"]
